--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link href="css/card-view.css" rel="stylesheet" type="text/css">
 <div class="box">
-    <h3>THIOEFWHERUWGOHIOUHIUWGHGUHIUQHGIUOQWHGIOUWQHIOUGHGIUEWHNGWHJNSJKLADGSJKADGSHJKADGSHJKADGSHJKLDGSHJKLADGSHKJLDGSJKLADGSHJKLADGSHJKLDGSAHJKLADGSHJKLADGSHJKLADGSHJKLDGSAHJKLADGSHJKLADGSHJKLADGSHJKLLDGSAHJKLDGSHJKADGSHJKLADGSHJKLDGADGSHJKLADGSHJKLADGSK</h3>
+    <h1>Featured</h1>
+    <h3>Insert Boxes here</h3>
 </div>
